@@ -7,7 +7,7 @@ github_project=McJtyMods/LostCities
 
 mcp_mappings=20201028-1.16.3
 minecraft_version=1.16.4
-forge_version=35.1.13
+forge_version=35.1.28
 
 jei_version=1.16.2:7.1.1.15
 waila_version=1.8.23-B38_1.12
