@@ -3,6 +3,11 @@ package mcjty.lostcities.setup;
 
 import mcjty.lostcities.LostCities;
 import mcjty.lostcities.worldgen.LostCityFeature;
+import net.minecraft.util.RegistryKey;
+import net.minecraft.util.ResourceLocation;
+import net.minecraft.util.registry.Registry;
+import net.minecraft.world.DimensionType;
+import net.minecraft.world.World;
 import net.minecraft.world.gen.feature.Feature;
 import net.minecraftforge.event.RegistryEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
@@ -14,6 +19,9 @@ public class Registration {
 
     @ObjectHolder("lostcities:lostcityfeature")
     public static LostCityFeature LOSTCITY_FEATURE;
+
+    public static final RegistryKey<DimensionType> DIMENSION_TYPE = RegistryKey.getOrCreateKey(Registry.DIMENSION_TYPE_KEY, new ResourceLocation(LostCities.MODID, "lostcity"));
+    public static final RegistryKey<World> DIMENSION = RegistryKey.getOrCreateKey(Registry.WORLD_KEY, new ResourceLocation(LostCities.MODID, "lostcity"));
 
     @SubscribeEvent
     public static void registerFeatures(final RegistryEvent.Register<Feature<?>> event) {
