@@ -9,6 +9,8 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.world.Teleporter;
 import net.minecraft.world.World;
 import net.minecraft.world.server.ServerWorld;
+import net.minecraft.world.storage.WorldSavedData;
+import net.minecraftforge.common.util.ITeleporter;
 
 import java.util.function.Function;
 
@@ -34,30 +36,19 @@ public class CustomTeleporter extends Teleporter {
         return entity;
     }
 
-    public static void teleportToDimension(PlayerEntity player, RegistryKey<World> dimension, BlockPos pos){
+    public static void teleportToDimension(PlayerEntity player, ServerWorld dimension, BlockPos pos){
         teleportToDimension(player, dimension, pos.getX() + 0.5, pos.getY(), pos.getZ() + 0.5);
     }
 
-    public static void teleportToDimension(PlayerEntity player, RegistryKey<World> dimension, double x, double y, double z) {
-        RegistryKey<World> oldDimension = player.getEntityWorld().getDimensionKey();
-        ServerPlayerEntity entityPlayerMP = (ServerPlayerEntity) player;
-        MinecraftServer server = player.getEntityWorld().getServer();
-        ServerWorld worldServer = server.getWorld(dimension);
-        player.addExperienceLevel(0);
-
-        if (worldServer == null || worldServer.getServer() == null){ //Dimension doesn't exist
-            throw new IllegalArgumentException("Dimension: "+dimension+" doesn't exist!");
-        }
-
-        // @todo 1.14
-//        worldServer.getServer().getPlayerList().transferPlayerToDimension(entityPlayerMP, dimension, new CustomTeleporter(worldServer, x, y, z));
-//        player.setPositionAndUpdate(x, y, z);
-//        if (oldDimension == 1) {
-//            // For some reason teleporting out of the end does weird things.
-//            player.setPositionAndUpdate(x, y, z);
-//            worldServer.spawnEntity(player);
-//            worldServer.updateEntityWithOptionalForce(player, false);
-//        }
+    public static void teleportToDimension(PlayerEntity player, ServerWorld dimension, double x, double y, double z) {
+        player.changeDimension(dimension, new ITeleporter() {
+            @Override
+            public Entity placeEntity(Entity entity, ServerWorld currentWorld, ServerWorld destWorld, float yaw, Function<Boolean, Entity> repositionEntity) {
+                entity = repositionEntity.apply(false);
+                entity.setPositionAndUpdate(x, y, z);
+                return entity;
+            }
+        });
     }
 
 }
