@@ -1,5 +1,0 @@
-public net.minecraft.world.chunk.Chunk field_76636_d # isChunkLoaded
-public net.minecraft.world.chunk.ChunkPrimer field_177860_a # data
-public net.minecraft.world.gen.structure.StructureStart func_75072_c()V # updateBoundingBox
-public net.minecraft.block.SoundType field_185862_o # breakSound
-public net.minecraft.world.biome.Biome field_76791_y # biomeName
