@@ -1,0 +1,12 @@
+{
+  "type": "lostcities:lostcity",
+  "generator": {
+    "type": "minecraft:noise",
+    "seed": 0,
+    "settings": "minecraft:overworld",
+    "biome_source": {
+      "type": "minecraft:vanilla_layered",
+      "seed": 0
+    }
+  }
+}
