@@ -1,0 +1,18 @@
+{
+  "name": "Lost City Dimension",
+  "ultrawarm": false,
+  "natural": true,
+  "coordinate_scale": 1,
+  "shrunk": false,
+  "has_skylight": true,
+  "has_ceiling": false,
+  "ambient_light": 0,
+  "fixed_time": false,
+  "piglin_safe": false,
+  "bed_works": true,
+  "respawn_anchor_works": true,
+  "has_raids": false,
+  "logical_height": 256,
+  "infiniburn": "minecraft:infiniburn_overworld",
+  "effects": "minecraft:overworld"
+}
