@@ -1,16 +1,0 @@
-[
-{
-  "modid": "lostcities",
-  "name": "The Lost Cities",
-  "description": "The Lost Cities World Generator",
-  "version": "${version}",
-  "mcversion": "${mcversion}",
-  "url": "",
-  "updateUrl": "",
-  "authorList": ["McJty"],
-  "credits": "",
-  "logoFile": "",
-  "screenshots": [],
-  "dependencies": []
-}
-]
