@@ -1,6 +1,6 @@
 {
   "pack": {
-    "pack_format": 4,
+    "pack_format": 6,
     "description": "Resources used for The Lost Cities"
   }
 }
